@@ -2340,7 +2340,14 @@ public class userExec {
         hl.add(null, "9 9,.                  [num]          packet contents");
         hl.add(null, "2 3      whois                        asn name cache");
         hl.add(null, "3 .        <num>                      asn number");
-        hl.add(null, "2 3      acl                          access list merge, unroll");
+        hl.add(null, "2 3      access-list                  access list hit");
+        hl.add(null, "3 4        <name:acl>                 name of acl");
+        hl.add(null, "4 5          <num>                    protocol number");
+        hl.add(null, "5 6            <addr>                 source address");
+        hl.add(null, "6 7              <num>                source port");
+        hl.add(null, "7 8                <addr>             target address");
+        hl.add(null, "8 .                  <num>            target port");
+        hl.add(null, "2 3      acl-merge                    access list merge, unroll");
         hl.add(null, "3 4,.      <name:acl>                 name of first acl");
         hl.add(null, "4 .          <name:acl>               name of second acl");
         hl.add(null, "2 3      yangsensor                   create yang from sensor");
