@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.5-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-05 12:14:01, took 00:10:51, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2023-12-05 17:53:45, took 00:09:39, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
